--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 REACT_APP_API_URL_DEV = 'http://localhost:9999/api/services'
-REACT_APP_API_URL_BUILD = ''
+REACT_APP_API_URL_BUILD = 'https://ra-observable-server.herokuapp.com/'
