--- a/package.json
+++ b/package.json
@@ -47,5 +47,6 @@
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.7.1"
-  }
+  },
+  "homepage": "https://github.com/Sergl82/ra-observable-details"
 }
